Adding base features and testing

--- a/BlazorBattleApp/Client/BlazorBattleApp.Client.csproj
+++ b/BlazorBattleApp/Client/BlazorBattleApp.Client.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Shared\BlazorBattleApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\icons\" />
+  </ItemGroup>
+
 </Project>
